fix to last project card on home stretch via className. Handling no project differently

--- a/src/components/ProjectCard/_project-card.scss
+++ b/src/components/ProjectCard/_project-card.scss
@@ -91,13 +91,13 @@
 	}
 	// var(--small): var(--small);
 	@media (min-width: $small) {
-		&:last-child {
+		&.stretch {
 			grid-column: 1/-1;
 		}
 	}
 
 	@media (min-width: $medium) {
-		&:last-child {
+		&.stretch {
 			grid-column: unset;
 		}
 	}
